# SLCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  HelloWorld.haxor  HelloWorld.sl  Makefile  README.md  ReadFile.cpp  hello.sl  main.cpp  parser.cs
HaxorCMakeScripts/: build.sh  configure.sh  external.sh  run.sh
HaxorLexer/: CMakeLists.txt  HaxorLexer.cpp  Lexer.cpp  Lexer.h
HaxorParser/: Ast.h  CMakeLists.txt  Parser.cpp  Parser.h
HaxorScripts/: clean.sh  run.sh
VSCode/: build.sh  clean.sh  configure.sh
cpplibs/: Essentials.h
